--- a/src/modeling.ipynb
+++ b/src/modeling.ipynb
@@ -16,6 +16,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.svm import OneClassSVM"
    ]
   },
@@ -330,7 +331,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model Training"
+    "### Normalization Process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform normalization of the dataset (MinMaxScaler)\n",
+    "scaler = MinMaxScaler()\n",
+    "normalized_discord_observation_dataset = scaler.fit_transform(discord_observation_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Training\n",
+    "\n",
+    "Models used:\n",
+    "- Autoencoder\n",
+    "- Isolation Forest\n",
+    "- One-Class SVM"
    ]
   },
   {
@@ -343,7 +367,7 @@
     "X = discord_observation_dataset.values\n",
     "\n",
     "# Initialize the OneClassSVM model\n",
-    "ocsvm = OneClassSVM(kernel='rbf', gamma='auto')\n",
+    "ocsvm = OneClassSVM(kernel='rbf', gamma='auto', nu=0.01)\n",
     "\n",
     "# Train the model\n",
     "ocsvm.fit(X)\n",
