--- a/src/modeling.ipynb
+++ b/src/modeling.ipynb
@@ -2102,7 +2102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2116,7 +2116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
